--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#000000</color>
+
     <color name="digital_text">#ffffff</color>
+    <color name="background">#0277bd</color>
+    <color name="background2">#000088</color>
+
+    <color name="backgroundRed">#F44336</color>
+    <color name="backgroundPink">#E91E63</color>
+    <color name="backgroundPurple">#9C27B0</color>
+    <color name="BackgroundDeepPurple">#673AB7</color>
+    <color name="backgroundIndigo">#3F51B5</color>
+    <color name="backgroundBlue">#2196F3</color>
+    <color name="backgroundLightBlue">#03A9F4</color>
+    <color name="backgroundCyan">#00BCD4</color>
+    <color name="backgroundTeal">#009688</color>
+    <color name="backgroundGreen">#4CAF50</color>
+    <color name="backgroundLightGreen">#8BC34A</color>
+    <color name="backgroundLime">#CDDC39</color>
+    <color name="backgroundYellow">#FFEB3B</color>
+    <color name="backgroundAmber">#FFC107</color>
+    <color name="backgroundOrange">#FF9800</color>
+    <color name="backgroundDarkOrange">#FF5722</color>
 </resources>
